<resources>
    <string name="app_name">Fitness Track</string>
    <string name="dummy_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. </string>
    <string name="fitness">Fitness</string>
    <string name="tracker">Tracker</string>
    <string name="get_started">Get Started</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="email_address">Email Address</string>
    <string name="password_hint">******</string>
    <string name="password_hint_text">Password</string>
    <string name="confirm_password_hint_text">Confirm Password</string>
    <string name="sign_in">Sign In</string>
    <string name="or_connect_with">or connect with</string>
    <string name="f">f</string>
    <string name="g">g</string>
    <string name="create_new_account">Create New Account</string>
    <string name="need_help">Need help?</string>
    <string name="full_name">Full Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="terms_condition">Term &amp; Conditions</string>
    <string name="and">and</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="select_device">Select Device</string>
    <string name="hourly">Hourly</string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="today">Today</string>
    <string name="_12_06_2019">12/06/2019</string>
    <string name="day_workout">day workout</string>
    <string name="steps">STEPS</string>
    <string name="steps_count">4,312</string>
    <string name="steps_miles">3.65 miles</string>
</resources>
