<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ui.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="10dp">

            <ImageView
                android:id="@+id/imageLogo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="60dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_tracker" />

            <TextView
                android:id="@+id/textFitness"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed-medium"
                android:gravity="center"
                android:text="@string/fitness"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textTracker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                android:gravity="center"
                android:text="@string/tracker"
                android:textAllCaps="true"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                android:textStyle="normal" />

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="40dp"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="10dp"
                android:hint="@string/email_address"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="20dp" />

            <EditText
                android:id="@+id/editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="40dp"
                android:drawableStart="@drawable/ic_password"
                android:drawablePadding="10dp"
                android:hint="@string/password_hint"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="20dp" />

            <Button
                android:id="@+id/buttonSignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="40dp"
                android:background="@drawable/button_theme_color_background"
                android:shadowRadius="2"
                android:text="@string/sign_in"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:text="@string/or_connect_with" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:orientation="horizontal"
                android:padding="10dp"
                android:weightSum="1">

                <Button
                    android:id="@+id/buttonFacebook"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_weight=".5"
                    android:background="@drawable/button_theme_color_background"
                    android:shadowRadius="2"
                    android:text="@string/f"
                    android:textAllCaps="false"
                    android:textColor="@color/colorWhite"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/buttonGoogle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_weight=".5"
                    android:background="@drawable/button_theme_color_background"
                    android:shadowRadius="2"
                    android:text="@string/g"
                    android:textAllCaps="false"
                    android:textColor="@color/colorWhite"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:ignore="ButtonStyle" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="40dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewCreateAccount"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/create_new_account"
                    android:textColor="@color/colorAccent" />

                <TextView
                    android:id="@+id/textViewNeedHelp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/need_help"
                    android:textColor="@color/colorAccent" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>