<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ui.SignUpActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:scrollbars="none"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="10dp">

            <ImageView
                android:id="@+id/imageLogo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="60dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_tracker" />

            <TextView
                android:id="@+id/textFitness"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed-medium"
                android:gravity="center"
                android:text="@string/fitness"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textTracker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                android:gravity="center"
                android:text="@string/tracker"
                android:textAllCaps="true"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                android:textStyle="normal" />

            <EditText
                android:id="@+id/editTextFullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="40dp"
                android:drawableStart="@drawable/ic_user"
                android:drawablePadding="10dp"
                android:hint="@string/full_name"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="20dp" />

            <EditText
                android:id="@+id/editTextEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="40dp"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="10dp"
                android:hint="@string/email_address"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="20dp" />
            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="40dp"
                android:drawableStart="@drawable/ic_password"
                android:drawablePadding="10dp"
                android:hint="@string/password_hint_text"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="20dp" />
            <EditText
                android:id="@+id/editTextCnfPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="40dp"
                android:drawableStart="@drawable/ic_password"
                android:drawablePadding="10dp"
                android:hint="@string/confirm_password_hint_text"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="20dp" />

            <Button
                android:id="@+id/buttonSignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="40dp"
                android:background="@drawable/button_theme_color_background"
                android:shadowRadius="2"
                android:text="@string/sign_up"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="16sp" />

                <TextView
                    android:id="@+id/textViewTerms"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/need_help"
                    android:gravity="center"
                    android:padding="10dp"
                    android:layout_marginTop="30dp"
                    android:textColor="@color/colorAccent" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>