<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_gravity="center"
    android:layout_height="match_parent"
    tools:context=".ui.ui.GetStartedActivity">

    <ImageView
        android:id="@+id/imageLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="112dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_tracker"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.583"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textFitness"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed-medium"
        android:gravity="center"
        android:text="@string/fitness"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimary"
        android:textSize="45sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageLogo" />

    <TextView
        android:id="@+id/textTracker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:gravity="center"
        android:text="@string/tracker"
        android:textAllCaps="true"
        android:textColor="@color/colorAccent"
        android:textSize="40sp"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textFitness" />

    <TextView
        android:id="@+id/textLorem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:gravity="center"
        android:text="@string/dummy_text"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimary"
        android:layout_marginBottom="20dp"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/buttonGetStarted" />

    <Button
        android:id="@+id/buttonGetStarted"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginStart="20dp"
        android:background="@drawable/button_theme_color_background"
        android:text="@string/get_started"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>