<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/buttonHourly"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/hourly"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:background="@drawable/button_theme_outline"
        app:layout_constraintEnd_toStartOf="@+id/buttonDaily"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonDaily"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/daily"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:background="@drawable/button_theme_color_background"
        app:layout_constraintEnd_toStartOf="@+id/buttonWeekly"
        app:layout_constraintStart_toEndOf="@+id/buttonHourly"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonWeekly"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/weekly"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:background="@drawable/button_theme_outline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonDaily"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/frameContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="70dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonDaily"/>

</androidx.constraintlayout.widget.ConstraintLayout>